Fix nav and spacing

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,14 +4,18 @@
   }
 body {
   background-image: url(../images/the-flatiron-building.jpg);
-      }
+  background-size: 1200px;
+  }
 .white {
   color: white;
-  }
+  margin-top: 0px;
+  margin-bottom: 0px;
+    }
 h1 {
   font-size: 70px;
   font-weight: bold;
   color: white;
+  margin-top: 0px;
   }
 h2 {
   font-size: 32px;
@@ -26,13 +30,22 @@ h3 {
   }
 .ourProcess {
   background-color: white;
-}
+  padding: 8px;
+  }
 .bottom {
   background-color: white;
-}
-.footer {
+  padding: 8px;
+  }
+footer {
+  font-size: 11px;
   text-align: left;
-}
+  color: white;
+  background-color: gray
+  }
+footer span a {
+  font-size: 18px;
+  color: white;
+  }
 nav p a {
   font-size: 18px;
   color: white;
